Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13229

QScriptProgram does not show up in Qt 4.7 beta although promised on blog post

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.7.0
    • 4.7.0
    • Qt Script
    • None
    • all of them
    • 94791e6d5be6859d87862d40233aece16d54932a

      This blog post says something about a class called "QScriptProgram" http://labs.trolltech.com/blogs/2009/11/23/qtscript-in-46/

      "In order to mitigate this potential issue in the case where you have a small script that you want to run several times, Qt 4.6 comes with a new class called QScriptProgram. QScriptProgram automatically caches the compiled form of your script. This class was added rather late in the 4.6 development and is marked as internal in the 4.6.0 release, so it won't show up in the documentation, but it's there and we think it's safe to start using it"

      It is now 4.7 and the class is still internal or at least does not show up in the documentation.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kenthans Kent Hansen (Inactive)
            axeljaeger Axel Jäger
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes