doc: Remove \internal tag from QScriptProgram

The class has been there since 4.6 (http://labs.trolltech.com/blogs/2009/11/23/qtscript-in-46/),
but we don't see a reason to hide it any longer.

Task-number: QTBUG-13229
Reviewed-by: Olivier Goffart
(cherry picked from commit 94791e6d5be6859d87862d40233aece16d54932a)